<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Litube</string>
    <string name="player_audio_only">Listen in background</string>
    <string name="back_again_to_exit">Press back again to exit</string>
    <string name="navigate_back">Back</string>
    <string name="extension">Extensions</string>
    <string name="open_with">Open with</string>
    <string name="about">About</string>
    <string name="display_dislikes">Show dislikes</string>
    <string name="display_dislikes_summary">Sends video IDs to returnyoutubedislikeapi.com</string>
    <string name="hide_shorts">Hide Shorts</string>
    <string name="interface_category">Interface</string>
    <string name="player">Playback</string>
    <string name="gesture">Gestures</string>
    <string name="gesture_single_tap">Single tap</string>
    <string name="gesture_double_tap">Double tap</string>
    <string name="gesture_long_press_speed">Hold for 2×</string>
    <string name="gesture_seek">Swipe seek</string>
    <string name="gesture_fullscreen_swipe">Enter/exit fullscreen</string>
    <string name="enable_in_embedded">In embedded player</string>
    <string name="enable_in_fullscreen">In fullscreen</string>
    <string name="brightness">Brightness</string>
    <string name="volume">Volume</string>
    <string name="background_mini_player">Background &amp; mini player</string>
    <string name="pip">Picture-in-Picture</string>
    <string name="in_app_mini_player">In-app mini-player</string>
    <string name="background_play">Background playback</string>
    <string name="sponsorblock">SponsorBlock</string>
    <string name="skip_sponsors">Skip sponsors</string>
    <string name="skip_sponsors_selfpromo">Skip self-promotion</string>
    <string name="skip_sponsors_interaction">Skip interaction reminders</string>
    <string name="skip_sponsors_intro">Skip intros</string>
    <string name="skip_sponsors_outro">Skip outros</string>
    <string name="skip_sponsors_preview">Skip previews</string>
    <string name="skip_sponsors_music_offtopic">Skip non-music sections</string>
    <string name="skip_sponsors_filler">Skip filler</string>
    <string name="skip_sponsors_highlight">Skip highlights</string>
    <string name="remember_last_position">Remember position</string>
    <string name="remember_quality">Remember video quality</string>
    <string name="remember_playback_speed">Remember speed</string>
    <string name="remember_resize_mode">Remember resize mode</string>
    <string name="use_original_title">Use original title</string>
    <string name="reset_all_settings">Reset all settings</string>
    <string name="reset_extension_title">Reset extensions</string>
    <string name="reset_extension_message">Reset all extension settings to default?</string>
    <string name="settings_backup_restore">Backup &amp; restore</string>
    <string name="settings_export">Export settings</string>
    <string name="settings_export_summary">Save current settings to a JSON file</string>
    <string name="settings_import">Import settings</string>
    <string name="settings_import_summary">Restore settings from a backup file</string>
    <string name="settings_import_confirm_title">Import settings?</string>
    <string name="settings_import_confirm_message">Current settings will be overwritten by the backup.</string>
    <string name="settings_export_done">Settings exported</string>
    <string name="settings_export_failed">Couldn\'t save settings file</string>
    <string name="settings_import_done">Settings imported</string>
    <string name="settings_import_failed">Invalid settings file</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="more_options">More</string>
    <string name="queue">Queue</string>
    <string name="queue_empty">Queue is empty</string>
    <string name="queue_item_added">Added to queue</string>
    <string name="queue_item_unavailable">Couldn\'t add to queue</string>
    <string name="queue_remove">Remove from queue</string>
    <string name="application_not_found">Application not found</string>
    <string name="segments">Segments</string>
    <string name="no_segments">No skippable segments</string>
    <string name="subtitles">Subtitles</string>
    <string name="playback_end_next">Play next</string>
    <string name="playback_end_loop">Loop one</string>
    <string name="playback_end_pause">Pause at end</string>
    <string name="playback_end_shuffle">Shuffle</string>
    <string name="action_fullscreen">Fullscreen</string>
    <string name="action_previous">Previous</string>
    <string name="player_channel_name">Player controls</string>
    <string name="player_channel_desc">Media playback controls</string>
    <string name="action_next">Next</string>
    <string name="action_play">Play</string>
    <string name="action_pause">Pause</string>
    <string name="action_replay">Replay</string>
    <string name="player_quality_auto">Auto</string>
    <string name="player_live">LIVE</string>
    <string name="player_time_bar">Playback position</string>
    <string name="lock_screen">Lock</string>
    <string name="unlock_screen">Unlock</string>
    <string name="audio_track">Audio track</string>
    <string name="player_audio_default">Default</string>
    <string name="info">Info</string>
    <string name="player_info_title">Title</string>
    <string name="player_info_author">Author</string>
    <string name="player_info_quality">Quality</string>
    <string name="player_info_duration">Duration</string>
    <string name="player_info_type">Type</string>
    <string name="player_info_id">Video ID</string>
    <string name="resize_mode">Resize</string>
    <string name="resize_fit">Fit</string>
    <string name="resize_fill">Fill</string>
    <string name="resize_zoom">Zoom</string>
    <string name="resize_fixed_width">Fixed width</string>
    <string name="resize_fixed_height">Fixed height</string>
    <string name="subtitle_style">Subtitle style</string>
    <string name="subtitle_style_preview">Subtitle preview</string>
    <string name="subtitle_style_text_size">Text size</string>
    <string name="subtitle_style_background">Background</string>
    <string name="subtitle_background_none">None</string>
    <string name="subtitle_background_semi">Translucent</string>
    <string name="subtitle_background_opaque">Solid</string>
    <string name="subtitle_style_color">Text color</string>
    <string name="subtitle_style_hex">Hex</string>
    <string name="subtitle_style_drag_hint">Drag the preview to reposition</string>
    <string name="subtitle_style_bold">Bold</string>
    <string name="subtitle_auto_generated">(auto)</string>
    <string name="reset">Reset</string>
    <string name="share">Share</string>
    <string name="share_no_link_found">No link found</string>
    <string name="close">Close</string>
    <string name="jump">Jump</string>
    <string name="clear_queue">Clear queue</string>
    <string name="queue_autoplay">Autoplay</string>
    <string name="player_error">Couldn\'t play this video</string>
    <string name="retry">Retry</string>
    <string name="segment_intro">Intro</string>
    <string name="segment_outro">Outro</string>
    <string name="segment_interaction">Engagement prompt</string>
    <string name="segment_preview">Preview</string>
    <string name="segment_music_offtopic">Non-music</string>
    <string name="cast">Cast</string>
    <string name="cast_stop">Stop casting</string>
    <string name="cast_failed">Cast failed</string>
    <string name="casting_to">Casting to %1$s</string>
    <string name="cast_no_devices_found">No Cast devices found</string>
    <string name="cast_no_devices_hint">Make sure casting is set up on the same network.</string>
    <string name="cast_unavailable">Cast unavailable</string>
    <string name="cast_unavailable_hint">Cast needs Google Play Services.</string>
    <string name="cast_section_devices">Available devices</string>
    <string name="cast_section_link">Open on any device</string>
    <string name="cast_section_link_hint">On the same Wi-Fi network.</string>
    <string name="cast_learn_casting">Learn about casting</string>
    <string name="add_to_queue">Add to queue</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="cast_link_connected">Link opened in browser</string>
    <string name="cast_link_close">Close link</string>
    <string name="cast_link_banner">Streaming via link</string>
    <string name="action_restore_watch">Return to video</string>
    <string name="no_subtitles">No subtitles</string>
    <string name="subtitle_unavailable">Subtitle unavailable</string>
    <string name="speed_hold_2x">2×</string>
    <string name="jumped_to_segment">Jumped to: %1$s</string>
    <string name="sponsor_countdown">Sponsor skip countdown</string>
    <string name="sponsor_skip_in">Skipping in %1$d s</string>
    <string name="sponsor_skip_chip">Skip</string>
    <string name="show_likes">Show exact like counts</string>
    <string name="info_video_codec">Video codec</string>
    <string name="info_audio_codec">Audio codec</string>
    <string name="info_resolution">Resolution</string>
    <string name="info_bitrate">Video bitrate</string>
    <string name="info_itag">Itag</string>
    <string name="info_audio_bitrate">Audio bitrate</string>
    <string name="info_sample_rate">Sample rate</string>
    <string name="info_channels">Channels</string>
    <string name="copy">Copy</string>
    <string name="copied">Copied</string>
    <string name="copy_all">Copy all</string>
    <string name="queue_now_playing">Now playing</string>
    <string name="clear_queue_confirm">Clear the whole queue?</string>
    <string name="ok">OK</string>
    <string name="download_channel_name">Downloads</string>
    <string name="download_channel_desc">Download progress</string>
    <string name="download_resume">Resume</string>
    <string name="download_view">View</string>
    <string name="download_complete">Download complete</string>
    <string name="download_paused">Paused</string>
    <string name="download_failed">Download failed</string>
    <string name="download_reason_storage">Not enough storage</string>
    <string name="download_reason_memory">Out of memory</string>
    <string name="download_reason_forbidden">Server denied download (403)</string>
    <string name="download_reason_rate_limit">Too many requests (429)</string>
    <string name="downloads">Downloads</string>
    <string name="download">Download</string>
    <string name="download_video">Video</string>
    <string name="download_audio">Audio</string>
    <string name="download_quality">Download quality</string>
    <string name="download_quality_hint">Higher quality uses more data and storage</string>
    <string name="download_size_estimate">About %1$s</string>
    <string name="download_size_unknown">Size unknown</string>
    <string name="download_more_options">More options</string>
    <string name="download_cover">Cover</string>
    <string name="download_filename">File name</string>
    <string name="download_attachments_only">Attachments only</string>
    <string name="download_redownload">Redownload</string>
    <string name="download_open">Open</string>
    <string name="download_copy_id">Copy video ID</string>
    <string name="download_delete">Delete</string>
    <string name="download_delete_local_file">Delete local file</string>
    <string name="download_delete_files">Delete files</string>
    <string name="download_delete_downloads">Delete downloads</string>
    <string name="download_more_actions">More actions</string>
    <string name="download_filter_all">All</string>
    <string name="download_filter_in_progress">In progress</string>
    <string name="download_filter_completed">Completed</string>
    <string name="download_phase_resolve">Resolving</string>
    <string name="download_phase_transfer">Downloading</string>
</resources>